--- a/app/globals.css
+++ b/app/globals.css
@@ -28,11 +28,11 @@
   margin-inline: auto;
   padding-inline: 1rem;
 
-  @media (width >= 768px) {
+  @media (width >=768px) {
     padding-inline: 2rem;
   }
 
-  @media (width >= 1280px) {
+  @media (width >=1280px) {
     padding-inline: 3rem;
   }
 }
@@ -48,6 +48,10 @@
   --font-sentient: 'Sentient', sans-serif;
 
   --shadow-glow: 0 0 8px 2px var(--tw-shadow-color);
+}
+
+html {
+  scroll-behavior: smooth;
 }
 
 body {
